cc.creativecomputing/log/Christian-Riekoffs-MacBook-Pro.local-2011-05-31_10-01-36.txt
[Tue May 31 10:01:36 CEST 2011] [CCLog Line:177:initialize] [INFO] logging to file: log/Christian-Riekoffs-MacBook-Pro.local-2011-05-31_10-01-36.txt
[Tue May 31 10:01:36 CEST 2011] [CCApp:display] [SEVERE] com.jogamp.opencl.CLException$CLBuildProgramFailureException: 
CLDevice [id: 16918016 name: GeForce 8600M GT type: GPU profile: FULL_PROFILE] build log:
<program source>:148:6: error: expected expression
         y2* = y2; 
             ^
<program source>:149:6: error: expected expression
         z2* = z2;
             ^
<program source>:208:13: error: expected ';' at end of declaration
         long count count = Poisson_count[seed>>24]; /* 256 element lookup table. Use MSB */
                    ^
<program source>:216:9: error: redefinition of 'd2'
         double d2;
                ^
<program source>:197:9: note: previous definition is here
         double d2; 
                ^
<program source>:265:9: error: use of undeclared identifier 'i'
                         for (i = max_order - 1; i-->index;){
                              ^
<program source>:265:28: error: use of undeclared identifier 'i'
                         for (i = max_order - 1; i-->index;){
                                                 ^
<program source>:266:7: error: use of undeclared identifier 'i'
                                 F[i + 1] = F[i]; 
                                   ^
<program source>:266:9: error: expected ']'
                                 F[i + 1] = F[i]; 
                                     ^
<program source>:266:6: note: to match this '['
                                 F[i + 1] = F[i]; 
                                  ^
<program source>:267:8: error: use of undeclared identifier 'i'
                                 ID[i + 1] = ID[i]; 
                                    ^
<program source>:267:10: error: expected ']'
                                 ID[i + 1] = ID[i]; 
                                      ^
<program source>:267:7: note: to match this '['
                                 ID[i + 1] = ID[i]; 
                                   ^
<program source>:268:11: error: use of undeclared identifier 'i'
                                 delta[i + 1][0] = delta[i][0]; 
                                       ^
<program source>:268:13: error: expected ']'
                                 delta[i + 1][0] = delta[i][0]; 
                                         ^
<program source>:268:10: note: to match this '['
                                 delta[i + 1][0] = delta[i][0]; 
                                      ^
<program source>:269:11: error: use of undeclared identifier 'i'
                                 delta[i + 1][1] = delta[i][1]; 
                                       ^
<program source>:269:13: error: expected ']'
                                 delta[i + 1][1] = delta[i][1]; 
                                         ^
<program source>:269:10: note: to match this '['
                                 delta[i + 1][1] = delta[i][1]; 
                                      ^
<program source>:270:11: error: use of undeclared identifier 'i'
                                 delta[i + 1][2] = delta[i][2];
                                       ^
<program source>:270:13: error: expected ']'
                                 delta[i + 1][2] = delta[i][2];
                                         ^
<program source>:270:10: note: to match this '['
                                 delta[i + 1][2] = delta[i][2];
                                      ^
<program source>:295:37:{295:21-295:28}: error: too few arguments to function call
     float myValue = celular(mySample);
                     ~~~~~~~         ^
<program source>:299:4: error: expected '}'
    
    ^
CLDevice [id: 16909312 name: Intel(R) Core(TM)2 Duo CPU     T8300  @ 2.40GHz type: CPU profile: FULL_PROFILE] build log:
<program source>:148:6: error: expected expression
         y2* = y2; 
             ^
<program source>:149:6: error: expected expression
         z2* = z2;
             ^
<program source>:208:13: error: expected ';' at end of declaration
         long count count = Poisson_count[seed>>24]; /* 256 element lookup table. Use MSB */
                    ^
<program source>:216:9: error: redefinition of 'd2'
         double d2;
                ^
<program source>:197:9: note: previous definition is here
         double d2; 
                ^
<program source>:265:9: error: use of undeclared identifier 'i'
                         for (i = max_order - 1; i-->index;){
                              ^
<program source>:265:28: error: use of undeclared identifier 'i'
                         for (i = max_order - 1; i-->index;){
                                                 ^
<program source>:266:7: error: use of undeclared identifier 'i'
                                 F[i + 1] = F[i]; 
                                   ^
<program source>:266:9: error: expected ']'
                                 F[i + 1] = F[i]; 
                                     ^
<program source>:266:6: note: to match this '['
                                 F[i + 1] = F[i]; 
                                  ^
<program source>:267:8: error: use of undeclared identifier 'i'
                                 ID[i + 1] = ID[i]; 
                                    ^
<program source>:267:10: error: expected ']'
                                 ID[i + 1] = ID[i]; 
                                      ^
<program source>:267:7: note: to match this '['
                                 ID[i + 1] = ID[i]; 
                                   ^
<program source>:268:11: error: use of undeclared identifier 'i'
                                 delta[i + 1][0] = delta[i][0]; 
                                       ^
<program source>:268:13: error: expected ']'
                                 delta[i + 1][0] = delta[i][0]; 
                                         ^
<program source>:268:10: note: to match this '['
                                 delta[i + 1][0] = delta[i][0]; 
                                      ^
<program source>:269:11: error: use of undeclared identifier 'i'
                                 delta[i + 1][1] = delta[i][1]; 
                                       ^
<program source>:269:13: error: expected ']'
                                 delta[i + 1][1] = delta[i][1]; 
                                         ^
<program source>:269:10: note: to match this '['
                                 delta[i + 1][1] = delta[i][1]; 
                                      ^
<program source>:270:11: error: use of undeclared identifier 'i'
                                 delta[i + 1][2] = delta[i][2];
                                       ^
<program source>:270:13: error: expected ']'
                                 delta[i + 1][2] = delta[i][2];
                                         ^
<program source>:270:10: note: to match this '['
                                 delta[i + 1][2] = delta[i][2];
                                      ^
<program source>:295:37:{295:21-295:28}: error: too few arguments to function call
     float myValue = celular(mySample);
                     ~~~~~~~         ^
<program source>:299:4: error: expected '}'
    
    ^ [error: CL_BUILD_PROGRAM_FAILURE]
	at com.jogamp.opencl.CLException.newException(CLException.java:78)
	at com.jogamp.opencl.CLProgram.build(CLProgram.java:381)
	at cc.creativecomputing.opencl.CCCLProgram.build(CCCLProgram.java:187)
	at cc.creativecomputing.opencl.demos.noise.CCCLCelularImageDemo.setup(CCCLCelularImageDemo.java:115)
	at cc.creativecomputing.CCApp.display(CCApp.java:562)
	at jogamp.opengl.GLDrawableHelper.display(GLDrawableHelper.java:191)
	at javax.media.opengl.awt.GLCanvas$DisplayAction.run(GLCanvas.java:873)
	at jogamp.opengl.GLDrawableHelper.invokeGL(GLDrawableHelper.java:363)
	at javax.media.opengl.awt.GLCanvas.maybeDoSingleThreadedWorkaround(GLCanvas.java:769)
	at javax.media.opengl.awt.GLCanvas.display(GLCanvas.java:388)
	at javax.media.opengl.awt.GLCanvas.paint(GLCanvas.java:487)
	at sun.awt.RepaintArea.paintComponent(RepaintArea.java:276)
	at sun.awt.RepaintArea.paint(RepaintArea.java:241)
	at apple.awt.ComponentModel.handleEvent(ComponentModel.java:263)
	at java.awt.Component.dispatchEventImpl(Component.java:4790)
	at java.awt.Component.dispatchEvent(Component.java:4544)
	at java.awt.EventQueue.dispatchEvent(EventQueue.java:635)
	at java.awt.EventDispatchThread.pumpOneEventForFilters(EventDispatchThread.java:296)
	at java.awt.EventDispatchThread.pumpEventsForFilter(EventDispatchThread.java:211)
	at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:201)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:196)
	at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:188)
	at java.awt.EventDispatchThread.run(EventDispatchThread.java:122)

